update paper include comparison of le

--- a/Writeup/discussion.tex
+++ b/Writeup/discussion.tex
@@ -34,3 +34,10 @@
 \caption{Tables of bounds on the $k$ where $r_e=1$. lower bounds (left) followed by upper bounds (right), dashes indicate the test was not run}
 \label{table:bounds}
 \end{figure}
+
+\begin{figure}
+\centering
+\input{sle.tex}
+\caption{Performance improvement of lazy over eager for $m=500$. Dashes indicate the test was not run.}
+\label{table:sle}
+\end{figure}
