--- a/Writeup/lexample.tex
+++ b/Writeup/lexample.tex
@@ -235,21 +235,21 @@ After computing $t_{full}$, $t_{eager}$ and $t_{lazy}$, the median runtime for e
 r_e(m,n,k) = \frac{t_{full}(m,n,k)}{t_{eager}(m,n,k)}\]
 Whenever these ratios are greater than 1, the specialized updating algorithms perform better than re-computing the QR factorization using Householder transformations. Once these ratios become less than 1, however, it is more advantageous to re-compute the QR factorization. In Figure~\ref{fig:1000plot} (left), we plot $r_e (m,n,k)$ versus $\log{k}$ for fixed values of $n$\footnote{This perspective is useful when the data vectors are of a fixed dimension and a practitioner is determining how columns can be altered in one batch before recomputation is more efficient than updating.  }. From these plots, we see that as $\log{k}$ increases, $r_e$ decreases for fixed $n$.  Specifically, we see a negative linear relationship, which confirms the inverse proportionality we anticipated in Section~\ref{sec:compare}\footnote{ We only show $r_e$ since the eager method is easier to compare to its analytic model}.
 
-On these plots we also include a line called {\texttt breakeven}, which indicates when $r_e$ is equal to 1. All points above this line imply the lazy updating algorithm is faster, while all points below this line imply the Householder algorithm is faster.  By comparing the $r_e$ curves to the breakeven line, we see that the breakeven $k$ value increases as $n$ increases.  We also see that as $m$ increases (successively lower plots), the curves shift up and to the right, indicating improved performance of the lazy algorithm.  For example, the $n=64$ curve crosses the breakeven line at $log(k) = 1.25$ for $m = 100$; at $\log(k) = 2.6$ for $m = 500$; and, at $\log(k) = 2.8$ for $m =1000$.  This tells us that the breakeven $k$ value increases as $m$ increases, for fixed $n$.  Thus, we have experimentally shown what we had predicted in Section\ref{sec:compare}: as the matrix size increases in either dimension, the breakeven point increases.
+On these plots we also include a line called {\texttt breakeven}, which indicates when $r_e$ is equal to 1. All points above this line imply the lazy updating algorithm is faster, while all points below this line imply the Householder algorithm is faster.  By comparing the $r_e$ curves to the breakeven line, we see that the breakeven $k$ value increases as $n$ increases.  We also see that as $m$ increases (successively lower plots), the curves shift up and to the right, indicating improved performance of the lazy algorithm.  For example, the $n=64$ curve crosses the breakeven line at $log(k) = 1.25$ for $m = 100$; at $\log(k) = 2.6$ for $m = 500$; and, at $\log(k) = 2.8$ for $m =1000$.  This tells us that the breakeven $k$ value increases as $m$ increases, for fixed $n$.  Thus, we have experimentally shown what we had predicted in Section~\ref{sec:compare}: as the matrix size increases in either dimension, the breakeven point increases.
 
-Another perspective is determining for a fixed batch size $k$, how much faster is updating only that batch compared to the entire factorization as a function of the dimensionality of the problem $n$. We show this type of perspective in the plots of Figure~\ref{fig:1000plot} (right).  Here, we plot $r_e (m,n,k)$ versus n for fixed values of $k$. We see that there is nearly linear growth in $r(m_0, n, k_0)$ as $n$ increases, when $m$ is large. This is what we would expect from the analytic bounds on flop counts, as detailed in Section 4. We also see that as m increases, (successively lower plots), the curves shift upward for a fixed combination of n, k.  For example, for $m=100$, the $k=1$ curve has an $r_e$ value of $5.5$ at $n = 100$; for $m=500$, the $k=1$ curve has an $r_e$ value of $22$ at $n = 500$; and, for $m=1000$, the $k=1$ curve has an $r_e$ value of 32 for $m =1000$.  Thus, as $m$ increases for a fixed $n,k$ pair, the $C_m$ value increases, which corroborates our theory from Section\ref{sec:compare}.  We provide the tables that contain all of the data used to construct the plots in Figure~\ref{fig:1000plot} (left and right) in Figure~\ref{table:sfm}.
+Another perspective is determining for a fixed batch size $k$, how much faster is updating only that batch compared to the entire factorization as a function of the dimensionality of the problem $n$. We show this type of perspective in the plots of Figure~\ref{fig:1000plot} (right).  Here, we plot $r_e (m,n,k)$ versus n for fixed values of $k$. We see that there is nearly linear growth in $r(m_0, n, k_0)$ as $n$ increases, when $m$ is large. This is what we would expect from the analytic bounds on flop counts, as detailed in Section~\ref{sec:compare}. We also see that as m increases, (successively lower plots), the curves shift upward for a fixed combination of n, k.  For example, for $m=100$, the $k=1$ curve has an $r_e$ value of $5.5$ at $n = 100$; for $m=500$, the $k=1$ curve has an $r_e$ value of $22$ at $n = 500$; and, for $m=1000$, the $k=1$ curve has an $r_e$ value of 32 for $m =1000$.  Thus, as $m$ increases for a fixed $n,k$ pair, the $C_m$ value increases, which corroborates our theory from Section~\ref{sec:compare}.  We provide the tables that contain all of the data used to construct the plots in Figure~\ref{fig:1000plot} (left and right) in Figure~\ref{table:sfm}.
 
 \input{discussion.tex}
 
 As detailed in Section~\ref{sec:compare}, the model described by Equation~\ref{eqn:model} can produce a prediction of the breakeven point by solving $C_m n = k$.  As described previously, we can determine $C_m$ experimentally from our data, and then use this value to predict where the breakeven point will occur.  Figure~\ref{table:keven} contains a table of experimentally determined breakeven points by using this method.  Comparing these values to their counterparts in Figure~\ref{table:bounds}, which contains our analytic model's lower and upper bound predictions for the breakeven points, we see that all of our experimental results fall within the bounds predicted by our analytic model.
 
 
-Since the analysis of the eager method is simpler, we present mostly the results of the eager code. However since the flop count of the lazy method is lower, it outperforms the eager method. This can be verified in Table~\ref{table:sle} which shows $\frac{T_{eager}(500,n,k)}{T_{lazy}(500,n,k)}$.
+Since the analysis of the eager method is simpler, we present mostly the results of the eager code. However since the flop count of the lazy method is lower, it outperforms the eager method. This can be verified in Table~\ref{table:sle} which shows $\frac{T_{eager}(500,n,k)}{T_{lazy}(500,n,k)}$. The signed rank test results for $m=500,k=1$ indicate that for small $k$ and small $n$ lazy and eager cannot be distinguished in run time. But for large $n$ and small $k$ eager is faster than lazy. This confirms out expectation because  $\sum_{i=1}^k n-i \approx kn$ but simpler code gives the eager method an advantage, but when $k$ is large, the approximation does not hold.
 
 \section{Conclusion}
 In this paper, we have shown how specialized algorithms can improve the performance of QR factorization updating under sparse additive updates.  We presented an analytic model for the performance gains. We used this model to predict the anticipated performance increase for various conditions.  Upon implementing the algorithms and comparing their performances experimentally, we corroborated the theory we had presented.
 
-\newpage{}
+%\newpage{}
 \begin{thebibliography}{10}
 
 \bibitem{Golub-VanLoan}
